@@ -5,6 +5,7 @@ GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
 2007/03/20
+	* Patched the MAX_STATUSCHANGE startup error [ultramage]
 	* Prevented @storage/@gstorage from working if you are already
 	  vending/trading/etc.
 	* Made pvpoff/killable/killer/gvgoff make all related characters stop
