@@ -4,6 +4,7 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/03/20
+	* Patched the MAX_STATUSCHANGE startup error [ultramage]
 	* Removed the last argument from script command skillitem.
 	* Added skill ITEM_ENCHANTARMS, this is what weapon enchanting items should
 	  use.
