@@ -22,6 +22,8 @@ Playtester
 
 Date		Added
 ======
+2007/03/20
+	* Removed duplicate Noyee npc [ultramage]
 2007/03/14
 	* Reduced the chance to socket enchant a C rank item to 40% [Playtester]
 	- info comes from kRO monthly and jRO players
